--- a/index.html
+++ b/index.html
@@ -6,7 +6,60 @@
   </head>
   <body>
     <!-- FILL IN YOUR SCORE BOARD HTML CODE HERE -->
- 
+    <table>
+      <thead>
+        <tr>
+          <th id = "boardName">SEUNG FIELD</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+          <table>
+            <tbody>
+          <tr>
+          <th></th>
+          <th>1</th>
+          <th>2</th>
+          <th>3</th>
+          <th>4</th>
+          <th>5</th>
+          <th>6</th>
+          <th>7</th>
+          <th>R</th>
+        </tr>
+        <tr>
+          <td>AWAY</td>
+          <td class:"score" name="score[away][0]">0</td>
+          <td class:"score" name="score[away][1]">0</td>
+          <td class:"score" name="score[away][2]">0</td>
+          <td class:"score" name="score[away][3]">0</td>
+          <td class:"score" name="score[away][4]">0</td>
+          <td class:"score" name="score[away][5]">0</td>
+          <td class:"score" name="score[away][6]">0</td>
+          <td class:"total" name="runs[away]">0</td>
+        </tr>
+        <tr>
+          <td>HOME</td>
+          <td class:"score" name="score[away][0]">0</td>
+          <td class:"score" name="score[away][1]">0</td>
+          <td class:"score" name="score[away][2]">0</td>
+          <td class:"score" name="score[away][3]">0</td>
+          <td class:"score" name="score[away][4]">0</td>
+          <td class:"score" name="score[away][5]">0</td>
+          <td class:"score" name="score[away][6]">0</td>
+          <td class:"total" name="runs[away]">0</td>
+        </tr>
+      </tbody>
+    </table>
+    </td>
+    <td>
+      <img src="images/ups.png">
+    </td>
+  </tr>
+  </tbody>
+  </table>
     <script src="app.js"></script>
   </body>
 </html>
