--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <title>Scoreboard Operator</title>
-    <link rel="stylesheet" href="scoreboard.css" />
   </head>
   <body>
     <!-- FILL IN YOUR SCORE BOARD HTML CODE HERE -->
-    <table>
+    <table class = "scoreBoard">
       <thead>
         <tr>
           <th id = "boardName">SEUNG FIELD</th>
@@ -16,50 +15,107 @@
       <tbody>
         <tr>
           <td>
-          <table>
-            <tbody>
-          <tr>
-          <th></th>
-          <th>1</th>
-          <th>2</th>
-          <th>3</th>
-          <th>4</th>
-          <th>5</th>
-          <th>6</th>
-          <th>7</th>
-          <th>R</th>
-        </tr>
-        <tr>
-          <td>AWAY</td>
-          <td class:"score" name="score[away][0]">0</td>
-          <td class:"score" name="score[away][1]">0</td>
-          <td class:"score" name="score[away][2]">0</td>
-          <td class:"score" name="score[away][3]">0</td>
-          <td class:"score" name="score[away][4]">0</td>
-          <td class:"score" name="score[away][5]">0</td>
-          <td class:"score" name="score[away][6]">0</td>
-          <td class:"total" name="runs[away]">0</td>
-        </tr>
-        <tr>
-          <td>HOME</td>
-          <td class:"score" name="score[away][0]">0</td>
-          <td class:"score" name="score[away][1]">0</td>
-          <td class:"score" name="score[away][2]">0</td>
-          <td class:"score" name="score[away][3]">0</td>
-          <td class:"score" name="score[away][4]">0</td>
-          <td class:"score" name="score[away][5]">0</td>
-          <td class:"score" name="score[away][6]">0</td>
-          <td class:"total" name="runs[away]">0</td>
+            <table>
+              <tbody>
+                <tr>
+                  <th></th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                  <th>4</th>
+                  <th>5</th>
+                  <th>6</th>
+                  <th>7</th>
+                  <th>R</th>
+                </tr>
+                <tr>
+                  <td>AWAY</td>
+                  <td class="score" name="score[away][0]">0</td>
+                  <td class="score" name="score[away][1]">0</td>
+                  <td class="score" name="score[away][2]">0</td>
+                  <td class="score" name="score[away][3]">0</td>
+                  <td class="score" name="score[away][4]">0</td>
+                  <td class="score" name="score[away][5]">0</td>
+                  <td class="score" name="score[away][6]">0</td>
+                  <td class="total" name="runs[away]">0</td>
+                </tr>
+                <tr>
+                  <td>HOME</td>
+                  <td class="score" name="score[home][0]">0</td>
+                  <td class="score" name="score[home][1]">0</td>
+                  <td class="score" name="score[home][2]">0</td>
+                  <td class="score" name="score[home][3]">0</td>
+                  <td class="score" name="score[home][4]">0</td>
+                  <td class="score" name="score[home][5]">0</td>
+                  <td class="score" name="score[home][6]">0</td>
+                  <td class="total" name="runs[home]">0</td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+          <td>
+            <img src="images/ups.png">
+          </td>
         </tr>
       </tbody>
     </table>
-    </td>
-    <td>
-      <img src="images/ups.png">
-    </td>
-  </tr>
-  </tbody>
-  </table>
+    <br>
+    <br>
+    <br>
+    <table class="control">
+      <thead>
+        <tr>
+          <th id="controlHeader" colspan="4">CONTROL CENTER</th>
+        </tr>
+        <tr>
+          <th colspan="4"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <label for="who">Who:</label>
+          </td>
+          <td>
+            <select id="who">
+              <option value="away">Away</option>
+              <option value="home">Home</option>
+            </select>
+          </td>
+          <td>
+            <label for="inning">Inning:</label>
+          </td>
+          <td>
+            <select id="inning">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <td>Runs:</td>
+          <td>
+            <button id="up">+</button>
+            <button id="down">-</button>
+          </td>
+          <td colspan="2"></td>
+        </tr>
+        <tr>
+          <td>Sound: </td>
+          <td>
+            <button name="effects">🎵</button>
+            <button name="music">🎹</button>
+          </td>
+          <td colspan="2"></td>
+        </tr>
+      </tbody>
+    </table>
+<link rel="stylesheet" href="scoreboard.css" />
     <script src="app.js"></script>
   </body>
 </html>
