--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Scoreboard Operator</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scoreboard Operator</title>
+</head>
+<body>
     <!-- FILL IN YOUR SCORE BOARD HTML CODE HERE -->
     <table class = "scoreBoard">
       <thead>
         <tr>
-          <th id = "boardName">SEUNG FIELD</th>
+          <th id = "boardName" colspan="1">SEUNG FIELD</th>
           <th></th>
         </tr>
       </thead>
@@ -30,25 +33,25 @@
                 </tr>
                 <tr>
                   <td>AWAY</td>
-                  <td class="score" name="score[away][0]">0</td>
-                  <td class="score" name="score[away][1]">0</td>
-                  <td class="score" name="score[away][2]">0</td>
-                  <td class="score" name="score[away][3]">0</td>
-                  <td class="score" name="score[away][4]">0</td>
-                  <td class="score" name="score[away][5]">0</td>
-                  <td class="score" name="score[away][6]">0</td>
-                  <td class="total" name="runs[away]">0</td>
+                  <td class="score" name="awayScore0">0</td>
+                  <td class="score" name="awayScore1">0</td>
+                  <td class="score" name="awayScore2">0</td>
+                  <td class="score" name="awayScore3">0</td>
+                  <td class="score" name="awayScore4">0</td>
+                  <td class="score" name="awayScore5">0</td>
+                  <td class="score" name="awayScore6">0</td>
+                  <td class="total" name="awayRuns">0</td>
                 </tr>
                 <tr>
                   <td>HOME</td>
-                  <td class="score" name="score[home][0]">0</td>
-                  <td class="score" name="score[home][1]">0</td>
-                  <td class="score" name="score[home][2]">0</td>
-                  <td class="score" name="score[home][3]">0</td>
-                  <td class="score" name="score[home][4]">0</td>
-                  <td class="score" name="score[home][5]">0</td>
-                  <td class="score" name="score[home][6]">0</td>
-                  <td class="total" name="runs[home]">0</td>
+                  <td class="score" name="homeScore0">0</td>
+                  <td class="score" name="homeScore1">0</td>
+                  <td class="score" name="homeScore2">0</td>
+                  <td class="score" name="homeScore3">0</td>
+                  <td class="score" name="homeScore4">0</td>
+                  <td class="score" name="homeScore5">0</td>
+                  <td class="score" name="homeScore6">0</td>
+                  <td class="total" name="homeRuns">0</td>
                 </tr>
               </tbody>
             </table>
