--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </table>
           </td>
           <td>
-            <img src="images/ups.png">
+            <img id="theImg" src="images/ups.png">
           </td>
         </tr>
       </tbody>
@@ -97,6 +97,7 @@
               <option value="5">5</option>
               <option value="6">6</option>
               <option value="7">7</option>
+              <option value="R">R</option>
             </select>
           </td>
         </tr>
